--- a/app/src/main/res/layout/qr_generator.xml
+++ b/app/src/main/res/layout/qr_generator.xml
@@ -1,97 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="#0c0c0c"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
 
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content"
-       android:orientation="vertical">
-
-       <codes.side.andcolorpicker.view.swatch.SwatchView
-           android:id="@+id/swatchView"
-           android:layout_width="match_parent"
-           android:layout_height="100dp" />
-
-       <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
-           android:id="@+id/hueSeekBar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:hslColoringMode="pure"
-           app:hslMode="hue" />
-       <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
-           android:id="@+id/saturationSeekBar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:hslColoringMode="pure"
-           app:hslMode="saturation" />
-       <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
-           android:id="@+id/lightnessSeekBar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           app:hslColoringMode="pure"
-           app:hslMode="lightness" />
-
-       <codes.side.andcolorpicker.alpha.HSLAlphaColorPickerSeekBar
-           android:id="@+id/alphaSeekBar"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" />
-   </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/viewPagerShapes">
 
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <ImageView
             android:id="@+id/iv_qrcode"
             android:layout_width="300dp"
             android:layout_height="300dp"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center" />
+
         <Space
 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
+
         <EditText
             android:id="@+id/edit_input"
             android:layout_width="300dp"
             android:layout_height="wrap_content" />
+
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
-        <Button
-            android:id="@+id/btn_create"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Create"/>
+            android:layout_weight="1" />
 
         <Button
-            android:id="@+id/btn_colorpicker"
+            android:id="@+id/btn_save_qr"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose Color"/>
+            android:text="Save" />
+
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"/>
+            android:layout_weight="1" />
 
     </LinearLayout>
 
 
 
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPagerShapes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="300dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
-
-
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
