--- a/app/src/main/res/layout/layout_qr_logo.xml
+++ b/app/src/main/res/layout/layout_qr_logo.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout
-        android:id="@+id/qr_options"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:padding="10dp">
+
 
         <!-- Padding Slider -->
         <TextView
@@ -99,6 +94,5 @@
             android:max="100"
             android:progress="25" />
 
-    </RelativeLayout>
 
-</LinearLayout>
+</RelativeLayout>
