--- a/app/src/main/res/layout/layout_qr_shape.xml
+++ b/app/src/main/res/layout/layout_qr_shape.xml
@@ -1,70 +1,351 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <com.ashique.qrscanner.custom.Frame
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="0dp"
+        android:minHeight="300dp"
+        android:padding="10dp"
         app:backgroundColor="#121212"
         app:cornerRadius="6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RadioGroup
-            android:id="@+id/radioGroupDarkPixelShape"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButtonDefault"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Default" />
 
-            <RadioButton
-                android:id="@+id/radioButtonCircle"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Circle" />
+                android:gravity="start|center"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButtonRoundCorners25"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/console"
+                    android:text="Qr Shape"
+                    android:textColor="@color/text"
+                    android:textSize="18sp" />
+
+
+                <RadioGroup
+                    android:id="@+id/radioGroupQrShape"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="start|center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/qrDefault"
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_square"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/qrCircle"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                </RadioGroup>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Round Corners 25%" />
+                android:layout_marginTop="20dp"
+                android:gravity="start|center"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButtonStar"
-                android:layout_width="wrap_content"
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/console"
+                    android:text="Dark Pixels Shape"
+                    android:textColor="@color/text"
+                    android:textSize="18sp" />
+
+                <RadioGroup
+                    android:id="@+id/radioGroupDarkPixelShape"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="start|center"
+                    android:orientation="horizontal">
+
+
+                    <RadioButton
+                        android:id="@+id/pixelDefault"
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_square"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/pixelCircle"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/pixelRoundCorners25"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rounded_corner"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/pixelStar"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_star"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/pixelRhombus"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rhombus"
+                        android:backgroundTint="@color/white"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/pixelRoundCornersHorizontal"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rounded_line"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/radioButtonRoundCornersVertical"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:background="@drawable/shape_rounded_line"
+                        android:backgroundTint="@color/text"
+                        android:button="@null"
+                        android:rotation="90" />
+                </RadioGroup>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Star" />
+                android:layout_marginTop="20dp"
+                android:gravity="start|center"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButtonRhombus"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/console"
+                    android:text="Frame Shape"
+                    android:textColor="@color/text"
+                    android:textSize="18sp" />
+
+
+                <RadioGroup
+                    android:id="@+id/radioGroupFrameShape"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="start|center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/frameDefault"
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_square"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/frameCircle"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/frameRoundCorners25"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rounded_corner"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/frameStar"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_star"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/frameRhombus"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rhombus"
+                        android:backgroundTint="@color/white"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/frameCircleMini"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                </RadioGroup>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Rhombus" />
+                android:layout_marginTop="20dp"
+                android:gravity="start|center"
+                android:orientation="vertical">
 
-            <RadioButton
-                android:id="@+id/radioButtonRoundCornersHorizontal"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="10dp"
+                    android:fontFamily="@font/console"
+                    android:text="Eye Ball Shape"
+                    android:textColor="@color/text"
+                    android:textSize="18sp" />
+
+
+                <RadioGroup
+                    android:id="@+id/radioGroupEyeShape"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="start|center"
+                    android:orientation="horizontal">
+
+                    <RadioButton
+                        android:id="@+id/eyeDefault"
+                        android:layout_width="19dp"
+                        android:layout_height="19dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_square"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/eyeCircle"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/eyeRoundCorners25"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rounded_corner"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/eyeStar"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_star"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/eyeRhombus"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_rhombus"
+                        android:backgroundTint="@color/white"
+                        android:button="@null" />
+
+                    <RadioButton
+                        android:id="@+id/eyeCircleMini"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginEnd="35dp"
+                        android:background="@drawable/shape_circle"
+                        android:backgroundTint="@color/text"
+                        android:button="@null" />
+
+                </RadioGroup>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Round Corners Horizontal" />
+                android:layout_marginTop="20dp"
+                android:orientation="vertical">
+                <SeekBar
+                    android:id="@+id/circleSizeSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
 
-            <RadioButton
-                android:id="@+id/radioButtonRoundCornersVertical"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Round Corners Vertical" />
-        </RadioGroup>
+                <TextView
+                    android:id="@+id/circleSizeText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Circle Size: 0.20" />
+            </LinearLayout>
 
+        </LinearLayout>
     </com.ashique.qrscanner.custom.Frame>
-
 
 
 </LinearLayout>
