--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="overlay_color">#99000000</color>
     <color name="barcode_overlay_stroke">#ffffff</color>
-
+    <color name="red">#FF0000</color>
+    <color name="gray">#636363</color>
 </resources>
