--- a/app/src/main/res/layout/dialog_color_picker.xml
+++ b/app/src/main/res/layout/dialog_color_picker.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:gravity="center"
-    android:background="@null"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,49 +12,53 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
 
-
-    <com.ashique.qrscanner.custom.Frame
-        android:id="@+id/frame"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        app:backgroundColor="#50ffffff"
-        app:borderColor="#00ffffff"
-        app:cornerRadius="3dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <com.ashique.qrscanner.custom.Frame
+            android:id="@+id/frame"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            app:backgroundColor="#50ffffff"
+            app:borderColor="#00ffffff"
+            app:cornerRadius="4dp">
 
-            <com.ashique.qrscanner.colorpicker.ColorPicker
-                android:id="@+id/colorPickerView"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:sliderThumbSize="15dp" />
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
-            <com.ashique.qrscanner.colorpicker.HueSlider
-                android:id="@+id/hueSlider"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="-15dp"
-                app:sliderBarStrokeCap="Square"
-                app:sliderThumbSize="11dp" />
+                <com.ashique.qrscanner.colorpicker.ColorPicker
+                    android:id="@+id/colorPickerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="130dp"
+                    app:sliderStrokeSize="3dp"
+                    app:sliderThumbSize="13dp" />
+
+                <com.ashique.qrscanner.colorpicker.HueSlider
+                    android:id="@+id/hueSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    app:sliderStrokeSize="3dp"
+                    app:sliderThickness="30dp"
+                    app:sliderThumbSize="13dp" />
 
 
-            <com.ashique.qrscanner.colorpicker.ColorAlphaSlider
-                android:id="@+id/colorAlphaSlider"
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="-25.5dp"
-                android:layout_marginBottom="-12.5dp"
-                app:sliderThumbSize="11dp" />
+                <com.ashique.qrscanner.colorpicker.ColorAlphaSlider
+                    android:id="@+id/colorAlphaSlider"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginBottom="0dp"
+                    app:sliderStrokeSize="3dp"
+                    app:sliderThickness="30dp"
+                    app:sliderThumbSize="13dp" />
 
-        </LinearLayout>
+            </LinearLayout>
 
-    </com.ashique.qrscanner.custom.Frame>
+        </com.ashique.qrscanner.custom.Frame>
 
         <com.ashique.qrscanner.custom.Buttons
             android:id="@+id/preview_button"
@@ -70,4 +73,5 @@
             app:_fillColor="#3A3A3A"
             app:_radius="6dp" />
     </LinearLayout>
-</LinearLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
