--- a/app/src/main/res/layout/layout_qr_color.xml
+++ b/app/src/main/res/layout/layout_qr_color.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="10dp">
+    android:orientation="vertical">
 
 
     <RadioGroup
         android:id="@+id/radioGroupColor"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:gravity="center"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,13 +22,15 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            app:customActiveColor="#FFFFFF"
-            app:customActiveIconColor="#000000"
-            app:customBackgroundColor="#10ffffff"
-            app:customBorderColor="#10ffffff"
+            android:checked="true"
+            app:customActiveColor="@color/text"
+            app:customActiveIconColor="@color/icon_active"
+            app:customBackgroundColor="@color/radio_buttons_border"
+            app:customBorderColor="@color/radio_buttons_border"
             app:customBorderWidth="1dp"
             app:customCornerRadius="3dp"
             app:customIcon="@drawable/qr"
+            app:customIconColor="@color/text"
             app:customIconWidth="35dp" />
 
         <com.ashique.qrscanner.custom.RadioButtons
@@ -36,13 +38,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            app:customActiveColor="#FFFFFF"
-            app:customActiveIconColor="#000000"
-            app:customBackgroundColor="#10ffffff"
-            app:customBorderColor="#10ffffff"
+            app:customActiveColor="@color/text"
+            app:customActiveIconColor="@color/icon_active"
+            app:customBackgroundColor="@color/radio_buttons_border"
+            app:customBorderColor="@color/radio_buttons_border"
             app:customBorderWidth="1dp"
             app:customCornerRadius="3dp"
             app:customIcon="@drawable/qr_darkpixel"
+            app:customIconColor="@color/text"
             app:customIconWidth="35dp" />
 
         <com.ashique.qrscanner.custom.RadioButtons
@@ -50,43 +53,43 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_marginEnd="20dp"
-            app:customActiveColor="#FFFFFF"
-            app:customActiveIconColor="#000000"
-            app:customBackgroundColor="#10ffffff"
-            app:customBorderColor="#10ffffff"
+            app:customActiveColor="@color/text"
+            app:customActiveIconColor="@color/icon_active"
+            app:customBackgroundColor="@color/radio_buttons_border"
+            app:customBorderColor="@color/radio_buttons_border"
             app:customBorderWidth="1dp"
             app:customCornerRadius="3dp"
             app:customIcon="@drawable/qr_eye"
+            app:customIconColor="@color/text"
             app:customIconWidth="35dp" />
 
         <com.ashique.qrscanner.custom.RadioButtons
             android:id="@+id/qr_frame_color"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            app:customActiveColor="#FFFFFF"
-            app:customActiveIconColor="#000000"
-            app:customBackgroundColor="#10ffffff"
-            app:customBorderColor="#10ffffff"
+            app:customActiveColor="@color/text"
+            app:customActiveIconColor="@color/icon_active"
+            app:customBackgroundColor="@color/radio_buttons_border"
+            app:customBorderColor="@color/radio_buttons_border"
             app:customBorderWidth="1dp"
             app:customCornerRadius="3dp"
             app:customIcon="@drawable/qr_frame"
+            app:customIconColor="@color/text"
             app:customIconWidth="35dp" />
     </RadioGroup>
 
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_line" />
 
-
-
-
-    <RelativeLayout
-        android:id="@+id/relativeLayout"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroupColor"
-        tools:layout_editor_absoluteX="10dp">
-
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp">
 
         <com.ashique.qrscanner.custom.Buttons
             android:id="@+id/btn_solid_color"
@@ -94,9 +97,14 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="4dp"
-            app:_fillColor="#15ffffff"
+            app:_activeColor="@color/text"
+            app:_activeIconColor="@color/icon_active"
+            app:_borderColor="@color/radio_buttons_border"
+            app:_borderWidth="1dp"
+            app:_checked="true"
+            app:_fillColor="@color/radio_buttons_border"
             app:_icon="@drawable/ic_solid"
-            app:_iconColor="@color/white"
+            app:_iconColor="@color/text"
             app:_iconHeight="30dp"
             app:_iconWidth="30dp"
             app:_radius="3dp" />
@@ -106,23 +114,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_toEndOf="@+id/btn_solid_color"
             android:gravity="center"
             android:padding="4dp"
-            app:_fillColor="#15ffffff"
+            app:_activeColor="@color/text"
+            app:_activeIconColor="@color/icon_active"
+            app:_borderColor="@color/radio_buttons_border"
+            app:_borderWidth="1dp"
+            app:_fillColor="@color/radio_buttons_border"
             app:_icon="@drawable/ic_gradient"
-            app:_iconColor="@color/white"
+            app:_iconColor="@color/text"
             app:_iconHeight="30dp"
             app:_iconWidth="30dp"
             app:_radius="3dp" />
 
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:visibility="gone"
+        android:id="@+id/gradient_frame"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginTop="15dp"
+            android:background="@drawable/shape_line" />
 
         <RadioGroup
             android:id="@+id/radioGroupGradient"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/btn_gradient_color"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -132,13 +157,14 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
                 android:rotation="180"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_arrow_up"
+                app:customIconColor="@color/text"
                 app:customIconWidth="24dp" />
 
             <com.ashique.qrscanner.custom.RadioButtons
@@ -147,13 +173,14 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
                 android:rotation="90"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_arrow_up"
+                app:customIconColor="@color/text"
                 app:customIconWidth="24dp" />
 
             <com.ashique.qrscanner.custom.RadioButtons
@@ -161,13 +188,14 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_arrow_right_down"
+                app:customIconColor="@color/text"
                 app:customIconWidth="24dp" />
 
             <com.ashique.qrscanner.custom.RadioButtons
@@ -176,13 +204,14 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
                 android:rotation="270"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_arrow_right_down"
+                app:customIconColor="@color/text"
                 app:customIconWidth="24dp" />
 
             <com.ashique.qrscanner.custom.RadioButtons
@@ -191,13 +220,14 @@
                 android:layout_height="40dp"
                 android:layout_marginEnd="20dp"
                 android:button="@null"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_radial"
+                app:customIconColor="@color/text"
                 app:customIconWidth="40dp" />
 
 
@@ -206,56 +236,70 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:rotation="180"
-                app:customActiveColor="#FFFFFF"
-                app:customActiveIconColor="#000000"
-                app:customBackgroundColor="#10ffffff"
-                app:customBorderColor="#10ffffff"
+                app:customActiveColor="@color/text"
+                app:customActiveIconColor="@color/icon_active"
+                app:customBackgroundColor="@color/radio_buttons_border"
+                app:customBorderColor="@color/radio_buttons_border"
                 app:customBorderWidth="1dp"
                 app:customCornerRadius="3dp"
                 app:customIcon="@drawable/ic_gradient_sweep"
+                app:customIconColor="@color/text"
                 app:customIconWidth="24dp" />
 
 
         </RadioGroup>
+    </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/shape_line" />
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="15dp">
+
+        <com.ashique.qrscanner.custom.Buttons
+            android:id="@+id/btn_gradient_color0"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/radioGroupGradient"
-            android:layout_marginTop="20dp">
+            android:gravity="center"
+            android:padding="4dp"
+            app:_activeColor="@color/text"
+            app:_activeIconColor="@color/icon_active"
+            app:_borderColor="@color/radio_buttons_border"
+            app:_borderWidth="1dp"
+            app:_fillColor="@color/radio_buttons_border"
+            app:_icon="@drawable/ic_color_fill"
+            app:_iconColor="@color/text"
+            app:_iconHeight="30dp"
+            app:_iconWidth="30dp"
+            app:_radius="3dp" />
 
-            <com.ashique.qrscanner.custom.Buttons
-                android:id="@+id/btn_gradient_color0"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="4dp"
-                app:_fillColor="#15ffffff"
-                app:_icon="@drawable/ic_palette"
-                app:_iconColor="@color/white"
-                app:_iconHeight="30dp"
-                app:_iconWidth="30dp"
-                app:_radius="3dp" />
-
-            <com.ashique.qrscanner.custom.Buttons
-                android:id="@+id/btn_gradient_color1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginBottom="50dp"
-                android:gravity="center"
-                android:padding="4dp"
-                app:_fillColor="#15ffffff"
-                app:_icon="@drawable/ic_palette"
-                app:_iconColor="@color/white"
-                app:_iconHeight="30dp"
-                app:_iconWidth="30dp"
-                app:_radius="3dp" />
-        </LinearLayout>
-
-    </RelativeLayout>
-
+        <com.ashique.qrscanner.custom.Buttons
+            android:id="@+id/btn_gradient_color1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginBottom="50dp"
+            android:gravity="center"
+            android:padding="4dp"
+            app:_activeColor="@color/text"
+            app:_activeIconColor="@color/icon_active"
+            app:_borderColor="@color/radio_buttons_border"
+            app:_borderWidth="1dp"
+            app:_fillColor="@color/radio_buttons_border"
+            app:_icon="@drawable/ic_color_fill"
+            app:_iconColor="@color/text"
+            app:_iconHeight="30dp"
+            app:_iconWidth="30dp"
+            app:_radius="3dp" />
+    </LinearLayout>
 
 
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
